force-app/main/default/objects/PropertyInquiry__c/PropertyInquiry__c.object-meta.xml
<CustomObject>
    <label>Property Inquiry</label>
    <nameField>
        <displayFormat>INQI-{000000}</displayFormat>
        <label>Inquiry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>