force-app/main/default/objects/PropertyInquiry__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Inquiries</relationshipLabel>
    <relationshipName>Property_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>