force-app/main/default/objects/PropertyInquiry__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>1768</length>
    <type>LongTextArea</type>
</CustomField>