force-app/main/default/objects/PropertyInquiry__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>1768</length>
    <type>LongTextArea</type>
</CustomField>